--- a/email-templates/orderAdminNotification.ejs
+++ b/email-templates/orderAdminNotification.ejs
@@ -366,13 +366,18 @@
                             Customer placed a new order.<br>
                             Name: <%= order.user.name %><br>
                             Email: <%= order.user.email %>
+
                           <% } else { %>
                             Customer paid for a Service<br>
                             Email: <%= order.custEmail %><br>
                             Payment For: <%= order.paymentFor %><br>
                             Payment Description: <%= order.paymentDescription %>
                           <% } %>
-                          <% if ( order.cartItems ) { %>
+                          <% if ( order.cartItems ) { 
+                            if (order.cartItems[0] && order.cartItems[0].promoCode) {%>
+                              Promo Code: <%= order.cartItems[0].promoCode %>
+                          <% } %>
+                            
                             <table border="0" cellpadding="0" cellspacing="0" height="100%" class="tbl-content-orders" >
                               <tr>
                                 <th>Country</th>
@@ -381,12 +386,22 @@
                                 <th>Price</th>
                               </tr>
                              
-                              <% order.cartItems.forEach(item => { %>
+                                <%
+                                let totalAmount = 0;
+                                let promoCode = '';
+                                %>
+                            
+                                <% order.cartItems.forEach(item => { 
+                                  totalAmount += (item.price - item.discountAmount)
+                                  if(item.promoCode) {
+                                  promoCode = item.promoCode
+                                  }
+                                %>
                                 <tr>
                                   <td><%= item.country.name %></td>
                                   <td><%= item.serviceType %></td>
                                   <td><%= item.word_mark ? item.word_mark : item.mark %></td>
-                                  <td>$<%= item.price %></td>
+                                  <td>$<%= item.price %> <i><%= item.promoCode ? '(-$'+item.discountAmount+')' : '' %></i></td>
                                 </tr>
                               <% }) %>
                             </table>
