--- a/views/trademark-order/delivery.ejs
+++ b/views/trademark-order/delivery.ejs
@@ -47,7 +47,7 @@
                       <div class="col-xl-4 col-lg-5 col-6">
                         <div class="dwld-fl-box dwld-fl-pdf">
                           <div class="fl-cta">
-                            <a title="Download PDF" class="btn btn-blue" target="_blank" href="/uploads/certificate/<%= pngName %>.pdf"><em class="fal fa-file-pdf"></em>Download <span class="fl-type">PDF</span></a>
+                            <a title="Download PDF" class="btn btn-blue" target="_blank" href="/uploads/certificate/<%= pngName %>"><em class="fal fa-file-pdf"></em>Download <span class="fl-type">PDF</span></a>
                           </div>
                           <div class="fl-img-wrap img-clip-wrap">
                             <span class="img-clip" style="background-image: url('/pdf/png/<%= pngName %>_1.png') !important;">
