updates invoice ongoing

--- a/views/partials/admin_side_nav.ejs
+++ b/views/partials/admin_side_nav.ejs
@@ -6,6 +6,7 @@
         <ul class="list-group list-group-flush">
             <li class="list-group-item"><a href="/njs-admin/manage/user">Manage Users</a></li>
             <li class="list-group-item"><a href="/njs-admin/manage/trademark">Manage Trademarks</a></li>
+            <li class="list-group-item"><a href="/njs-admin/manage/orders">Manage Orders</a></li>
             <li class="list-group-item"><a href="/njs-admin/manage/country">Manage Countries</a></li>
             <li class="list-group-item"><a href="/njs-admin/manage/promo">Manage PromoCode</a></li>
             <li class="list-group-item"><a href="/njs-admin/manage/tasks">Manage Task</a></li>
