--- a/views/customer/profile.ejs
+++ b/views/customer/profile.ejs
@@ -61,7 +61,7 @@
                               </div>
 
                               <div class="form-field mt-2">
-                                <span>Contact Number</span>
+                                <span>Contact Number:</span>
                                 <div class="row">
                                   <div class="col-6">
                                     <span>Phone: </span><%= user.phone %>
@@ -73,7 +73,7 @@
                               </div>
 
                               <div class="form-field mt-2">
-                                <span>Address</span>
+                                <span>Address:</span>
                                 <div class="row">
                                   <div class="col-12">
                                     <span>Street: </span><%= user.street %>
