--- a/views/trademark-order/delivery.ejs
+++ b/views/trademark-order/delivery.ejs
@@ -116,6 +116,8 @@
                             </div>
                                 <input type="hidden" name="trdId" id="trdId" value="<%= trademark._id %>">
                                 <input type="hidden" name="trdName" id="trdName" value="<%= trademark.mark %>">
+                                <input type="hidden" name="strClass" id="strClass" value="<%= trademark.class %>">
+                                <input type="hidden" name="trdSer" id="trdSer" value="<%= trademark.serialNumber %>">
                                 <input type="hidden" name="userEmail" id="userEmail" value="<%= trademark.user.email %>">
                           </fieldset>
 
