--- a/views/partials/nav-common2.ejs
+++ b/views/partials/nav-common2.ejs
@@ -105,6 +105,9 @@
                     </div>
                 </div>
             </li>
+            <li class="nav-item cart-icon">
+                <a class="nav-link" href="/cart"><i class="fas fa-shopping-cart"></i> <span id="shopping-cart"></span></a>
+            </li>
 
         </ul>
 
@@ -119,9 +122,9 @@
         </button>
     </div>
 </div>  -->
-<ul class="header-nav">
-
-    <li class="">
+<!-- <ul class="header-nav">
+    <li class="nav-item">
         <a class="nav-link" href="/cart"><i class="fas fa-shopping-cart"></i> <span id="shopping-cart"></span></a>
     </li>
-</ul>
+    
+</ul> -->
