--- a/views/admin/order/index.ejs
+++ b/views/admin/order/index.ejs
@@ -49,7 +49,7 @@
                
                 <td><%= moment(order.created_at_formatted).format('MMM D, YYYY') %></td>
 
-                <td><a href="/njs-admin/manage/orders/view/<%= order._id %>"><i class="fa fa-pen"></i></a></td>
+                <td><a href="/njs-admin/manage/orders/view/<%= order._id %>"><i class="fa fa-eye"></i></a></td>
             </tr>
             <% }) %>
         </tbody>
