--- a/public/stylesheets/less/_content.less
+++ b/public/stylesheets/less/_content.less
@@ -539,3 +539,44 @@
         font-size: 18px;
     }
 }
+
+.articleList{
+    margin-top: 20px;
+    margin-left: 0;
+    padding: 0;
+
+    li{
+        list-style: none;
+        margin-bottom: 15px;
+        padding-bottom: 15px;
+        border-bottom: 1px dashed #ccc;
+
+        span{
+            display: inline-block;
+            background: #3584ee;
+            color: #fff;
+            margin-right: 20px;
+            padding: 5px 10px;
+        }
+
+    }
+}
+
+.articleDate{
+    margin-bottom: 30px;
+    font-size: 12px;
+    font-style: italic;
+}
+
+#search.search-article{
+    .search-block{
+        padding-top: 0px;
+        position: relative;
+        max-width: 300px;
+        float: right;
+
+        button{
+            top: 4px;
+        }
+    }
+}
