--- a/views/partials/nav-common.ejs
+++ b/views/partials/nav-common.ejs
@@ -101,7 +101,7 @@
                         <a href="/privacy" class="dropdown-item">Privacy Policy</a> 
                         <a href="/service_contract" class="dropdown-item">Service Contract</a> 
                         <a href="/cookies" class="dropdown-item">Cookies Policy</a> 
-                        <a href="https://www.trademarkers.com/blog/" class="dropdown-item">Blog</a>
+                        <a href="/blog" class="dropdown-item">Blog</a>
                     </div>
                 </div>
             </li>
