--- a/views/public/blog.ejs
+++ b/views/public/blog.ejs
@@ -1,32 +1,52 @@
+
+
 <div class="container">
-	<div class="row justify-content-center box-bg-container">
-		<div class="col-md-6">
+    <div class="row justify-content-center align-items-center box-bg-container">
+
+		<div class="col-md-12">
 					
-			<h2> Blog</h2>
+			
 
-			<p> Trademarkers is a leading international brand protection company that specializes in global trademark registration. Our accredited and internationally respected lawyers have helped numerous customers protect their brands and intellectual property worldwide.</p>
+			<div id="search" class="search-article">
+				<form method="POST" action="/blog">
+				
+					<div class="input-group search-block">
 
-			<p> Our clients range from individuals who wish to protect one idea in one country, to intellectual property attorneys with multiple clients, to large businesses trademarking their brands throughout entire industries globally.</p>
+						<button type="submit">
+							<i class="fa fa-search"></i>
+						</button>
+						<input type="text" class="form-control" name="articleName" placeholder="Search Articles">
 
+					</div>
+				</form>
+			</div>
+
+			<h2>Articles</h2>
+			
 		</div>
 
-		<div class="col-md-6">
-					
-			<h2> Why Trademarkers?</h2>
+        <div class="col-md-12">
+			
+			<% if (flash.success) { %>
+			<div class="alert alert-success" role="alert">
+				<strong><%= flash.success %></strong>
+			</div>
+			<% } %>
 
-			<p> We have a team of lawyers, with years of experience in Trademark Registrations, which allows us to assure you:</p>
-			<ul>
-				<li> Competent professionals will perform all necessary procedures for the registration of your trademark</li>
-
-				<li> You will receive timely information regarding updates to the process from dedicated account representatives</li>
-
-				<li> If objections arise in the registration process (opposition, refusal, etc.), knowledgeable lawyers will advise you on the appropriate course of action</li>
-
-				<li> You can follow the interim status of your trademark in real­time, from application to registration, through a secure member’s section</li>
-
-				<li> All information provided to us will be kept in absolute confidentiality ­ please view our confidentiality policy</li>
+			<% if (flash.error) { %>
+				<div class="alert alert-warning" role="alert">
+					<strong><%= flash.error %></strong>
+				</div>
+			<% } %>
+			
+                    
+			<ul class="articleList">
+				<% for (var key in articles) { %>
+				<li><a href="/blog/<%= articles[key].post_name %>"><span><%= moment(articles[key].post_date).format('MMM D, YYYY') %></span><%= articles[key].post_title %></a></li>
+				<% } %>
 			</ul>
-			  
-		</div>
-	</div>
+
+               
+        </div>
+    </div>
 </div>
