--- a/views/customer/orders.ejs
+++ b/views/customer/orders.ejs
@@ -77,6 +77,7 @@
                             <table class="table table-striped table-bordered caption-top table-hover" style="font-size:14px">
                                 <thead>
                                   <tr>
+                                    <th>Order #</th>
                                     <th>App. Date</th>
                                     <th>App. Number</th>
                                     <th>Service</th>
@@ -89,6 +90,7 @@
                                   <% mark.data.forEach(function(trademark,key) { %>
                                     <% if( trademark.status == "Registered" ) { %>
                                       <tr>
+                                        <td><%= trademark.orderCode %></td>
                                         <td><%= moment(trademark.filingDate).format('MMM D, YYYY') %></td>
                                         <td><%= trademark.serialNumber %></td>
                                         <td style="text-transform: capitalize;"><%= trademark.serviceType ? 'Trademark '+ trademark.serviceType : '' %></td>
@@ -114,6 +116,7 @@
                             <table class="table table-striped table-bordered caption-top table-hover" style="font-size:14px">
                                 <thead>
                                   <tr>
+                                    <th>Order #</th>
                                     <th>App. Date</th>
                                     <th>App. Number</th>
                                     <th>Service</th>
@@ -126,6 +129,7 @@
                                   <% mark.data.forEach(function(trademark,key) { %>
                                     <% if( trademark ) { %>
                                       <tr>
+                                        <td><%= trademark.orderCode %></td>
                                         <td><%= moment(trademark.filingDate).format('MMM D, YYYY') %></td>
                                         <td><%= trademark.serialNumber %></td>
                                         <td style="text-transform: capitalize;"><%= trademark.serviceType ? 'Trademark '+ trademark.serviceType : '' %></td>
