--- a/views/order/registrationLanding.ejs
+++ b/views/order/registrationLanding.ejs
@@ -221,7 +221,7 @@
 				<p>Filing a trademark application through Benelux grants protection in Belgium, Netherlands and Luxembourg.</p>
 				<p>The ownership of a trademark is not automatically granted merely by using it. Generally speaking, only by going through the legal process of registration can you ensure rights to your trademark.</p>
 				<p>Registering a trademark is not always a simple matter of submitting an application. Many jurisdictions do not make information readily available to the public and some do not provide reliable data online. Researching similarities to your trademark can be a complex task.</p>
-				<h4>Trademarkers.com will process your trademark registration in Hong Kong through the following steps:</h4>
+				<h4>Trademarkers.com will process your trademark registration in Benelux through the following steps:</h4>
 			<% } %>
 
 			
@@ -349,6 +349,8 @@
 								<li>Enforce Your Trademark</li>
 								<li>Draft a Settlement Agreement</li>
 							</ul>
+
+							<p><a class="btn btn-primary btn-black btn-pull-right" style="border-radius:40px" href="/service">Order Now</a></p>
 						</div>
 					</div>
 					
@@ -389,6 +391,8 @@
 								<li>Enforce Your Trademark</li>
 								<li>Draft a Settlement Agreement</li>
 							</ul>
+
+							<p><a class="btn btn-primary btn-black btn-pull-right" style="border-radius:40px" href="/service">Order Now</a></p>
 						</div>
 					</div>
 
