--- a/views/order/registrationLanding.ejs
+++ b/views/order/registrationLanding.ejs
@@ -330,7 +330,7 @@
 							<h2>Other Trademark Services</h2>
 
 							<p>Trademark New Applications</p>
-							<ul>
+							<ul class="theme-default">
 								<li>Office Action Response</li>
 								<li>Appeal a Final Refusal</li>
 								<li>Trademark Statement of Use</li>
@@ -338,14 +338,14 @@
 							</ul>
 
 							<p>Maintaining a Registered Mark</p>
-							<ul>
+							<ul class="theme-default">
 								<li>Trademark Renewal</li>
 								<li>Change or Update Trademark Owner</li>
 								<li>Trademark Monitoring</li>
 							</ul>
 
 							<p>Trademark Disputes</p>
-							<ul>
+							<ul class="theme-default">
 								<li>Enforce Your Trademark</li>
 								<li>Draft a Settlement Agreement</li>
 							</ul>
@@ -372,7 +372,7 @@
 							<h2>Other Trademark Services</h2>
 
 							<p>Trademark New Applications</p>
-							<ul>
+							<ul class="theme-default">
 								<li>Office Action Response</li>
 								<li>Appeal a Final Refusal</li>
 								<li>Trademark Statement of Use</li>
@@ -380,14 +380,14 @@
 							</ul>
 
 							<p>Maintaining a Registered Mark</p>
-							<ul>
+							<ul class="theme-default">
 								<li>Trademark Renewal</li>
 								<li>Change or Update Trademark Owner</li>
 								<li>Trademark Monitoring</li>
 							</ul>
 
 							<p>Trademark Disputes</p>
-							<ul>
+							<ul class="theme-default">
 								<li>Enforce Your Trademark</li>
 								<li>Draft a Settlement Agreement</li>
 							</ul>
