--- a/email-templates/orderCustomerNotification.ejs
+++ b/email-templates/orderCustomerNotification.ejs
@@ -647,7 +647,7 @@
                         
                         <td valign="top" class="mcnTextContent" style="padding-top:0; padding-right:18px; padding-bottom:9px; padding-left:18px;">
                         
-                            We're pleased that you've placed an order with <a href="https://trademarkers.com" target="_blank" title="TradeMarkers Website">TradeMarkers.com</a>. You're on the right track to protect your intellectual property. We've received your order information and will contact you shortly to discuss your order and answer any questions you might have. Please review your order information below.
+                            We're pleased that you've placed an order with <a href="https://www.trademarkers.com" target="_blank" title="TradeMarkers Website">TradeMarkers.com</a>. You're on the right track to protect your intellectual property. We've received your order information and will contact you shortly to discuss your order and answer any questions you might have. Please review your order information below.
                         </td>
                     </tr>
                 </tbody></table>
@@ -1329,7 +1329,7 @@ Now that you're no longer completely new to Trademark questions, make sure to le
                                                                         <tbody><tr>
                                                                             
                                                                                 <td align="center" valign="middle" width="24" class="mcnFollowIconContent">
-                                                                                    <a href="https://trademarkers.com" target="_blank"><img src="https://cdn-images.mailchimp.com/icons/social-block-v2/outline-light-link-48.png" style="display:block;" height="24" width="24" class=""></a>
+                                                                                    <a href="https://www.trademarkers.com" target="_blank"><img src="https://cdn-images.mailchimp.com/icons/social-block-v2/outline-light-link-48.png" style="display:block;" height="24" width="24" class=""></a>
                                                                                 </td>
                                                                             
                                                                             
@@ -1432,7 +1432,7 @@ Now that you're no longer completely new to Trademark questions, make sure to le
                         
                             To make sure our e-mail updates are delivered to your inbox, please add <a href="mailto:info@trademarkers.com" target="_blank">info@trademarkers.com</a> to your e-mail address book.<br>
 <br>
-<a data-saferedirecturl="https://www.google.com/url?hl=en&q=http://www.bookdepository.com/contactus?utm_source%3DSV-Footer%26utm_medium%3Demail-Service%26utm_term%3DContact-us%26utm_content%3DFooter-links%26utm_campaign%3DOrder-dispatch&source=gmail&ust=1503720524267000&usg=AFQjCNH73hNtB1XpWOoS42JExfYgT9va_A" href="https://trademarkers.com/contact" target="_blank" title="Contact Us">Contact us</a> | <a data-saferedirecturl="https://www.google.com/url?hl=en&q=http://www.bookdepository.com/help/topic/HelpId/20/Our-privacy-policy?utm_source%3DSV-Footer%26utm_medium%3Demail-Service%26utm_term%3DPrivacy-Policy%26utm_content%3DFooter-links%26utm_campaign%3DOrder-dispatch&source=gmail&ust=1503720524267000&usg=AFQjCNFa0t4UX6ocun367uAsudKrkWahHQ" href="<%= process.env.APP_URL %>/privacy" target="_blank" title="Privacy Policy">Privacy policy</a><br>
+<a data-saferedirecturl="https://www.google.com/url?hl=en&q=http://www.bookdepository.com/contactus?utm_source%3DSV-Footer%26utm_medium%3Demail-Service%26utm_term%3DContact-us%26utm_content%3DFooter-links%26utm_campaign%3DOrder-dispatch&source=gmail&ust=1503720524267000&usg=AFQjCNH73hNtB1XpWOoS42JExfYgT9va_A" href="https://www.trademarkers.com/contact" target="_blank" title="Contact Us">Contact us</a> | <a data-saferedirecturl="https://www.google.com/url?hl=en&q=http://www.bookdepository.com/help/topic/HelpId/20/Our-privacy-policy?utm_source%3DSV-Footer%26utm_medium%3Demail-Service%26utm_term%3DPrivacy-Policy%26utm_content%3DFooter-links%26utm_campaign%3DOrder-dispatch&source=gmail&ust=1503720524267000&usg=AFQjCNFa0t4UX6ocun367uAsudKrkWahHQ" href="<%= process.env.APP_URL %>/privacy" target="_blank" title="Privacy Policy">Privacy policy</a><br>
 <br>
 <em>Copyright © 2021 TradeMarkers LLC, All rights reserved.</em>
                         </td>
