--- a/email-templates/verifyEmailNotification.ejs
+++ b/email-templates/verifyEmailNotification.ejs
@@ -803,7 +803,7 @@
                                                                         <tbody><tr>
                                                                             
                                                                                 <td align="center" valign="middle" width="24" class="mcnFollowIconContent">
-                                                                                    <a href="https://trademarkers.com" target="_blank"><img src="https://cdn-images.mailchimp.com/icons/social-block-v2/outline-light-link-48.png" style="display:block;" height="24" width="24" class=""></a>
+                                                                                    <a href="https://www.trademarkers.com" target="_blank"><img src="https://cdn-images.mailchimp.com/icons/social-block-v2/outline-light-link-48.png" style="display:block;" height="24" width="24" class=""></a>
                                                                                 </td>
                                                                             
                                                                             
@@ -906,7 +906,7 @@
                         
                             To make sure our e-mail updates are delivered to your inbox, please add <a href="mailto:info@trademarkers.com" target="_blank">info@trademarkers.com</a> to your e-mail address book.<br>
 <br>
-<a data-saferedirecturl="https://www.google.com/url?hl=en&q=http://www.bookdepository.com/contactus?utm_source%3DSV-Footer%26utm_medium%3Demail-Service%26utm_term%3DContact-us%26utm_content%3DFooter-links%26utm_campaign%3DOrder-dispatch&source=gmail&ust=1503720524267000&usg=AFQjCNH73hNtB1XpWOoS42JExfYgT9va_A" href="https://trademarkers.com/contact" target="_blank" title="Contact Us">Contact us</a> | <a data-saferedirecturl="https://www.google.com/url?hl=en&q=http://www.bookdepository.com/help/topic/HelpId/20/Our-privacy-policy?utm_source%3DSV-Footer%26utm_medium%3Demail-Service%26utm_term%3DPrivacy-Policy%26utm_content%3DFooter-links%26utm_campaign%3DOrder-dispatch&source=gmail&ust=1503720524267000&usg=AFQjCNFa0t4UX6ocun367uAsudKrkWahHQ" href="https://trademarkers.com/privacy" target="_blank" title="Privacy Policy">Privacy policy</a><br>
+<a data-saferedirecturl="https://www.google.com/url?hl=en&q=http://www.bookdepository.com/contactus?utm_source%3DSV-Footer%26utm_medium%3Demail-Service%26utm_term%3DContact-us%26utm_content%3DFooter-links%26utm_campaign%3DOrder-dispatch&source=gmail&ust=1503720524267000&usg=AFQjCNH73hNtB1XpWOoS42JExfYgT9va_A" href="https://www.trademarkers.com/contact" target="_blank" title="Contact Us">Contact us</a> | <a data-saferedirecturl="https://www.google.com/url?hl=en&q=http://www.bookdepository.com/help/topic/HelpId/20/Our-privacy-policy?utm_source%3DSV-Footer%26utm_medium%3Demail-Service%26utm_term%3DPrivacy-Policy%26utm_content%3DFooter-links%26utm_campaign%3DOrder-dispatch&source=gmail&ust=1503720524267000&usg=AFQjCNFa0t4UX6ocun367uAsudKrkWahHQ" href="https://www.trademarkers.com/privacy" target="_blank" title="Privacy Policy">Privacy policy</a><br>
 <br>
 <em>Copyright © 2021 TradeMarkers LLC, All rights reserved.</em>
                         </td>
